<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardBackgroundColor="@color/card1_bg"
    card_view:cardCornerRadius="6dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            style="@style/ShadowBlackTextWhite"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/show_init_animation"
            style="@style/ShadowBlackTextWhite"
            android:text="@string/show_init_animation" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/parallax_enabled"
            style="@style/ShadowBlackTextWhite"
            android:text="@string/parallax_enabled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ShadowBlackTextWhite"
                android:padding="16dp"
                android:text="@string/parallax_scale"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:minWidth="50dp"
                android:id="@+id/parallax_scale"
                android:gravity="center_horizontal"
                style="@style/ShadowBlackTextWhite"
                android:inputType="numberSigned" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ShadowBlackTextWhite"
                android:padding="16dp"
                android:text="@string/card_gap"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:minWidth="50dp"
                android:id="@+id/card_gap"
                android:gravity="center_horizontal"
                style="@style/ShadowBlackTextWhite"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ShadowBlackTextWhite"
                android:padding="16dp"
                android:text="@string/card_gap_bottom"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:id="@+id/card_gap_bottom"
                android:minWidth="50dp"
                android:gravity="center_horizontal"
                style="@style/ShadowBlackTextWhite"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/restart_activity"
            android:layout_gravity="center_horizontal"
            android:text="@string/restart_activity" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/reset_defaults"
            android:layout_gravity="center_horizontal"
            android:text="@string/reset_defaults" />
    </LinearLayout>
</android.support.v7.widget.CardView>